Added Color struct information
implemented rub structs/enums/array

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,13 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+
+Eddins_Eric_programming_project_4
+
+cs144-painter.xcodeproj/project.pbxproj
+
+cs144-painter/Canvas.cpp
+
+cs144-painter/Canvas.hpp
+
+cs144-painter/Eddins_Eric_programming_project_4
